--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npmCampReactNative",
+  "name": "npmCamp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,8 +9,8 @@
     "dev": "react-native run ios; react-native run android"
   },
   "dependencies": {
-    "react": "^15.2.0",
-    "react-native": "^0.29.0",
+    "react": "~15.2.0",
+    "react-native": "0.30.0",
     "react-native-vector-icons": "^2.0.3"
   },
   "devDependencies": {
